# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.

[project]
name = "pysonrpc"  # REQUIRED, is the only field that cannot be marked as dynamic.
dynamic = ["version"]
# version = "3.0.0"  # REQUIRED, although can be dynamic
description = "JSON RPC Python client with autodiscovery and methods mapping"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["python", "json", "rpc", "setuptools"]
authors = [ {name = "Vivien Chene", email = "viv@vivc.org" } ]
maintainers = [ {name = "Vivien Chene", email = "viv@vivc.org" } ]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
#   "Intended Audience :: Developers",
#   "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "requests",
  "prettytable"
]

# Deps to install e.g. with   $ pip install sampleproject[dev]
[project.optional-dependencies]
dev = ["pip", "tox", "build"]
test = ["tox"]

[project.urls]
"Homepage" = "https://github.com/vche/pysonrpc"
"Bug Reports" = "https://github.com/vche/pysonrpc/issues"
"Source" = "https://github.com/vche/pysonrpc"
# "Funding" = "https://donate.pypi.org"
# "Say Thanks!" = "http://saythanks.io/to/example"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
pysonrpc = "pysonrpc.cli:main"


# Configuration specific to the `setuptools` build backend.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}

[tool.setuptools.dynamic]
version = {attr = "pysonrpc.version.__version__"}
