[aliases]
test=tox
doc=build_sphinx

[metadata]
name = pysonrpc
author = Vivien Chene
author_email = viv@vivc.org
description = RPC Python client for kodi
version = attr: pysonrpc.version.__version__
url = https://github.com/vche/pysonrpc
keywords =
  python tool
classifiers =
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Development Status :: 5 - Production/Stable
  # Intended Audience :: Science/Research
  Topic :: Home Automation
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE

[options]
python_requires = >= 3.10
# packages =
#     find:
zip_safe = False
install_requires =
  requests
  prettytable

# Add additional non python data files
# [options.package_data]
#   * = *.txt, *.rst  # All projects
#   hello = *.msg     # hello project

[options.entry_points]
console_scripts =
  pysonrpc = pysonrpc.cli:main
# gui_scripts =
#   baz = my_package_gui:start_func

[tool:pytest]
testpaths=test

[build_sphinx]
source-dir = docs/sphinx_conf
build-dir = docs/doc
